--- a/app.html
+++ b/app.html
@@ -87,7 +87,7 @@
     import { getFirestore, doc, getDoc, setDoc, collection, addDoc, serverTimestamp, query, getDocs, orderBy } from "https://www.gstatic.com/firebasejs/11.9.1/firebase-firestore.js";
 
     const firebaseConfig = {
-      apiKey: "SUA_API_KEY_AQUI",
+      apiKey: "AIzaSyCtke_2T3e0HDDMqJsfJsRGs5KcKtN3Xe8",
       authDomain: "scanlistmarket-30143.firebaseapp.com",
       projectId: "scanlistmarket-30143",
     };
