--- a/app.html
+++ b/app.html
@@ -33,6 +33,7 @@
     .historico-item { background-color: #f9f9f9; border: 1px solid #ddd; border-radius: 8px; padding: 10px; margin-bottom: 10px; text-align: left; }
     .product-name-container { display: flex; align-items: center; justify-content: center; gap: 10px; }
     .product-actions button { background: none; border: none; font-size: 20px; cursor: pointer; padding: 5px; }
+    .big-font * { font-size: 20px !important; }
   </style>
 </head>
 <body>
@@ -122,6 +123,7 @@
         let cart = [];
         let barcodeAtual = null;
         
+        // Funções do Menu
         window.abrirMenu = function() {
           document.getElementById("mySideMenu").style.left = "0";
           document.getElementById("overlay").style.width = "100%";
@@ -134,6 +136,21 @@
           if (confirm("Tem certeza que deseja sair?")) {
             signOut(auth).then(() => { window.location.href = 'index.html'; });
           }
+        }
+
+        // Funções que estavam faltando
+        window.toggleAcessibilidade = function() { 
+          document.body.classList.toggle("big-font");
+          window.fecharMenu();
+        };
+        window.mudarIdioma = function() { 
+          alert("Função de idioma em desenvolvimento!"); 
+          window.fecharMenu();
+        };
+
+        // Função para fechar o histórico
+        window.fecharHistorico = function() {
+            document.getElementById("historicoContainer").innerHTML = "";
         }
 
         function limparCarrinhoUI() {
@@ -163,12 +180,8 @@
                 await addDoc(collection(db, "compras", user.uid, "historico"), compra);
                 alert("Compra salva no histórico!");
                 limparCarrinhoUI();
-            } catch (e) {
-                console.error("Erro ao salvar compra: ", e);
-                alert("Erro ao salvar compra.");
-            } finally {
-                btn.disabled = false; btn.innerText = "🛒 Finalizar Compra";
-            }
+            } catch (e) { console.error("Erro ao salvar compra: ", e); alert("Erro ao salvar compra."); }
+            finally { btn.disabled = false; btn.innerText = "🛒 Finalizar Compra"; }
         };
 
         window.adicionarAoCarrinho = function() {
@@ -197,6 +210,7 @@
         };
 
         window.verCarrinho = function() {
+            window.fecharHistorico();
             const container = document.getElementById("carrinhoDetalhado");
             if (cart.length === 0) { container.style.display = "none"; return; }
             let html = "<h3>Itens no Carrinho:</h3>";
@@ -268,16 +282,17 @@
         };
 
         window.verHistorico = async function() {
+            document.getElementById("carrinhoDetalhado").style.display = 'none';
+            window.fecharMenu();
             const container = document.getElementById("historicoContainer");
             container.innerHTML = "<h3>Buscando seu histórico...</h3>";
-            window.fecharMenu();
             try {
                 const q = query(collection(db, "compras", user.uid, "historico"), orderBy("data", "desc"));
                 const querySnapshot = await getDocs(q);
                 if (querySnapshot.empty) {
-                    container.innerHTML = "<h2>Histórico</h2><p>Nenhuma compra salva no histórico.</p>"; return;
+                    container.innerHTML = '<h2>Histórico <button onclick="fecharHistorico()" style="font-size: 14px; cursor: pointer; float: right;">Fechar</button></h2><p>Nenhuma compra salva no histórico.</p>'; return;
                 }
-                let html = "<h2>Seu Histórico de Compras</h2>";
+                let html = '<h2>Seu Histórico <button onclick="fecharHistorico()" style="font-size: 14px; cursor: pointer; float: right;">Fechar</button></h2>';
                 querySnapshot.forEach((doc) => {
                     const compra = doc.data();
                     const data = compra.data.toDate().toLocaleDateString('pt-BR');
@@ -316,9 +331,6 @@
                 alert(`Produto ${barcodeAtual} reportado! Obrigado.`);
             }
         };
-
-        window.mudarIdioma = function() { alert("Função de idioma em desenvolvimento!"); };
-        window.toggleAcessibilidade = function() { document.body.classList.toggle("big-font"); };
 
       } else {
         loadingOverlay.style.display = 'none';
