--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
@@ -10,46 +9,112 @@
       background-color: #d40000;
       font-family: Arial, sans-serif;
       display: flex;
-      flex-direction: column;
       align-items: center;
       justify-content: center;
       min-height: 100vh;
       margin: 0;
+      padding: 20px;
+      box-sizing: border-box;
     }
-    .container { text-align: center; }
-    .logo { width: 120px; margin-bottom: 24px; }
-    h1 { color: #fff; margin-bottom: 24px; }
-    input { width: 280px; padding: 12px; margin-bottom: 12px; border: none; border-radius: 4px; font-size: 16px; }
-    .btn { width: 280px; padding: 12px; margin-top: 8px; margin-bottom: 12px; border: none; border-radius: 4px; font-size: 16px; cursor: pointer; background-color: #fff; color: #d40000; font-weight: bold; transition: opacity 0.2s; }
-    .btn:hover { opacity: 0.9; }
-    .toggle-link { color: #fff; cursor: pointer; text-decoration: underline; margin-top: 10px; display: inline-block; }
-    .form-wrapper { display: flex; flex-direction: column; align-items: center; }
-    #form-cadastro { display: none; }
+    .login-card {
+      background-color: #ffffff;
+      padding: 40px 30px;
+      border-radius: 8px;
+      box-shadow: 0 4px 15px rgba(0,0,0,0.2);
+      width: 100%;
+      max-width: 400px;
+      text-align: center;
+    }
+    .logo {
+      width: 100px;
+      margin-bottom: 20px;
+    }
+    h1 {
+      color: #333;
+      margin-bottom: 30px;
+      font-size: 24px;
+    }
+    .input-group {
+      margin-bottom: 15px;
+      text-align: left;
+    }
+    input {
+      width: 100%;
+      padding: 12px;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+      font-size: 16px;
+      box-sizing: border-box;
+    }
+    .btn {
+      width: 100%;
+      padding: 12px;
+      margin-top: 10px;
+      border: none;
+      border-radius: 4px;
+      font-size: 16px;
+      font-weight: bold;
+      cursor: pointer;
+      transition: background-color 0.3s;
+    }
+    .btn-primary {
+      background-color: #d40000;
+      color: #fff;
+    }
+    .btn-primary:hover {
+      background-color: #a80000;
+    }
+    .btn-secondary {
+      background-color: #f1f1f1;
+      color: #555;
+      margin-top: 15px;
+    }
+    .btn-secondary:hover {
+      background-color: #e0e0e0;
+    }
+    .toggle-link {
+      color: #d40000;
+      cursor: pointer;
+      text-decoration: underline;
+      margin-top: 20px;
+      display: inline-block;
+      font-size: 14px;
+    }
+    /* Esconde campos de cadastro por padrão */
+    .campo-cadastro {
+      display: none;
+    }
   </style>
 </head>
 <body>
-  <div class="container">
+  <div class="login-card">
     <img src="https://i.imgur.com/dHOSups.png" alt="Scanlist Market Logo" class="logo">
-    <h1>Scanlist Market</h1>
-    <div id="form-login" class="form-wrapper">
-      <input type="email" id="loginEmail" placeholder="Email">
-      <input type="password" id="loginSenha" placeholder="Senha">
-      <button class="btn" onclick="loginEmail()">Entrar</button>
-      <p class="toggle-link" onclick="toggleForm('cadastro')">Ainda não tem uma conta? Cadastre-se</p>
+    <h1 id="form-title">Login</h1>
+
+    <div id="form-container">
+        <div class="input-group campo-cadastro">
+            <input type="text" id="nome" placeholder="Nome completo" required>
+        </div>
+        <div class="input-group">
+            <input type="email" id="email" placeholder="Email" required>
+        </div>
+        <div class="input-group">
+            <input type="password" id="senha" placeholder="Senha" required>
+        </div>
+        <div class="input-group campo-cadastro">
+            <input type="password" id="confirmarSenha" placeholder="Confirmar senha" required>
+        </div>
+        
+        <button id="main-button" class="btn btn-primary" onclick="loginEmail()">Entrar</button>
+        <button class="btn btn-secondary" onclick="loginGoogle()">Entrar com Google</button>
     </div>
-    <div id="form-cadastro" class="form-wrapper">
-      <input type="text" id="cadastroNome" placeholder="Nome completo">
-      <input type="email" id="cadastroEmail" placeholder="Email">
-      <input type="password" id="cadastroSenha" placeholder="Senha">
-      <input type="password" id="confirmarSenha" placeholder="Confirmar senha">
-      <button class="btn" onclick="criarConta()">Criar Conta</button>
-      <p class="toggle-link" onclick="toggleForm('login')">Já tem uma conta? Faça Login</p>
-    </div>
+
+    <p id="toggle-link" class="toggle-link" onclick="toggleForm()">Ainda não tem uma conta? Cadastre-se</p>
   </div>
 
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/12.0.0/firebase-app.js";
-    import { getAuth, signInWithEmailAndPassword, createUserWithEmailAndPassword, updateProfile, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/12.0.0/firebase-auth.js";
+    import { getAuth, signInWithEmailAndPassword, createUserWithEmailAndPassword, updateProfile, signInWithPopup, GoogleAuthProvider, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/12.0.0/firebase-auth.js";
 
     const firebaseConfig = {
       apiKey: "AIzaSyCtke_2T3e0HDDMqJsfJsRGs5KcKtN3Xe8",
@@ -63,41 +128,68 @@
 
     const app = initializeApp(firebaseConfig);
     const auth = getAuth(app);
+    const provider = new GoogleAuthProvider();
 
-    window.toggleForm = (form) => {
-      const loginForm = document.getElementById('form-login');
-      const cadastroForm = document.getElementById('form-cadastro');
-      if (form === 'cadastro') {
-        loginForm.style.display = 'none';
-        cadastroForm.style.display = 'block';
+    let isLoginView = true;
+
+    window.toggleForm = () => {
+      isLoginView = !isLoginView;
+      const camposCadastro = document.querySelectorAll('.campo-cadastro');
+      const formTitle = document.getElementById('form-title');
+      const mainButton = document.getElementById('main-button');
+      const toggleLink = document.getElementById('toggle-link');
+
+      if (isLoginView) {
+        formTitle.innerText = "Login";
+        camposCadastro.forEach(el => el.style.display = 'none');
+        mainButton.innerText = "Entrar";
+        mainButton.setAttribute('onclick', 'loginEmail()');
+        toggleLink.innerText = "Ainda não tem uma conta? Cadastre-se";
       } else {
-        loginForm.style.display = 'block';
-        cadastroForm.style.display = 'none';
+        formTitle.innerText = "Criar Conta";
+        camposCadastro.forEach(el => el.style.display = 'block');
+        mainButton.innerText = "Criar Conta";
+        mainButton.setAttribute('onclick', 'criarConta()');
+        toggleLink.innerText = "Já tem uma conta? Faça Login";
       }
     };
 
     window.loginEmail = () => {
-      const email = document.getElementById('loginEmail').value.trim();
-      const senha = document.getElementById('loginSenha').value;
+      const email = document.getElementById('email').value.trim();
+      const senha = document.getElementById('senha').value;
       if (!email || !senha) return alert("Preencha email e senha.");
+
       signInWithEmailAndPassword(auth, email, senha)
-        .then(() => window.location.href = "app.html")
-        .catch(err => alert("Erro ao logar: " + err.message));
+        .then(() => { window.location.href = "app.html"; })
+        .catch(err => { alert("Erro ao logar: " + err.message); });
     };
 
     window.criarConta = () => {
-      const nome = document.getElementById('cadastroNome').value.trim();
-      const email = document.getElementById('cadastroEmail').value.trim();
-      const senha = document.getElementById('cadastroSenha').value;
+      const nome = document.getElementById('nome').value.trim();
+      const email = document.getElementById('email').value.trim();
+      const senha = document.getElementById('senha').value;
       const confirmarSenha = document.getElementById('confirmarSenha').value;
+
       if (!nome || !email || !senha) return alert("Preencha todos os campos.");
       if (senha !== confirmarSenha) return alert("As senhas não conferem.");
+      if (senha.length < 6) return alert("A senha precisa ter no mínimo 6 caracteres.");
+
       createUserWithEmailAndPassword(auth, email, senha)
         .then(userCredential => {
-          updateProfile(userCredential.user, { displayName: nome })
-            .then(() => window.location.href = "app.html");
+          return updateProfile(userCredential.user, { displayName: nome });
         })
-        .catch(err => alert("Erro ao criar conta: " + err.message));
+        .then(() => {
+          window.location.href = "app.html";
+        })
+        .catch(err => {
+          alert("Erro ao criar conta: " + err.message);
+        });
+    };
+
+    window.loginGoogle = () => {
+      signInWithPopup(auth, provider)
+        .then(() => { window.location.href = "app.html"; })
+        .catch(err => { alert("Erro ao logar com Google: " + err.message); });
     };
 
     onAuthStateChanged(auth, (user) => {
@@ -107,114 +199,4 @@
     });
   </script>
 </body>
-=======
-<!DOCTYPE html>
-<html lang="pt-BR">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Login - Scanlist Market</title>
-  <style>
-    body {
-      background-color: #d40000;
-      font-family: Arial, sans-serif;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      min-height: 100vh;
-      margin: 0;
-    }
-    .container { text-align: center; }
-    .logo { width: 120px; margin-bottom: 24px; }
-    h1 { color: #fff; margin-bottom: 24px; }
-    input { width: 280px; padding: 12px; margin-bottom: 12px; border: none; border-radius: 4px; font-size: 16px; }
-    .btn { width: 280px; padding: 12px; margin-top: 8px; margin-bottom: 12px; border: none; border-radius: 4px; font-size: 16px; cursor: pointer; background-color: #fff; color: #d40000; font-weight: bold; transition: opacity 0.2s; }
-    .btn:hover { opacity: 0.9; }
-    .toggle-link { color: #fff; cursor: pointer; text-decoration: underline; margin-top: 10px; display: inline-block; }
-    .form-wrapper { display: flex; flex-direction: column; align-items: center; }
-    #form-cadastro { display: none; }
-  </style>
-</head>
-<body>
-  <div class="container">
-    <img src="https://i.imgur.com/dHOSups.png" alt="Scanlist Market Logo" class="logo">
-    <h1>Scanlist Market</h1>
-    <div id="form-login" class="form-wrapper">
-      <input type="email" id="loginEmail" placeholder="Email">
-      <input type="password" id="loginSenha" placeholder="Senha">
-      <button class="btn" onclick="loginEmail()">Entrar</button>
-      <p class="toggle-link" onclick="toggleForm('cadastro')">Ainda não tem uma conta? Cadastre-se</p>
-    </div>
-    <div id="form-cadastro" class="form-wrapper">
-      <input type="text" id="cadastroNome" placeholder="Nome completo">
-      <input type="email" id="cadastroEmail" placeholder="Email">
-      <input type="password" id="cadastroSenha" placeholder="Senha">
-      <input type="password" id="confirmarSenha" placeholder="Confirmar senha">
-      <button class="btn" onclick="criarConta()">Criar Conta</button>
-      <p class="toggle-link" onclick="toggleForm('login')">Já tem uma conta? Faça Login</p>
-    </div>
-  </div>
-
-  <script type="module">
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/12.0.0/firebase-app.js";
-    import { getAuth, signInWithEmailAndPassword, createUserWithEmailAndPassword, updateProfile, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/12.0.0/firebase-auth.js";
-
-    const firebaseConfig = {
-      apiKey: "AIzaSyCtke_2T3e0HDDMqJsfJsRGs5KcKtN3Xe8",
-      authDomain: "scanlistmarket-30143.firebaseapp.com",
-      databaseURL: "https://scanlistmarket-30143-default-rtdb.firebaseio.com",
-      projectId: "scanlistmarket-30143",
-      storageBucket: "scanlistmarket-30143.appspot.com",
-      messagingSenderId: "428406265714",
-      appId: "1:428406265714:web:0a9d92dc1229458a3d6feb"
-    };
-
-    const app = initializeApp(firebaseConfig);
-    const auth = getAuth(app);
-
-    window.toggleForm = (form) => {
-      const loginForm = document.getElementById('form-login');
-      const cadastroForm = document.getElementById('form-cadastro');
-      if (form === 'cadastro') {
-        loginForm.style.display = 'none';
-        cadastroForm.style.display = 'block';
-      } else {
-        loginForm.style.display = 'block';
-        cadastroForm.style.display = 'none';
-      }
-    };
-
-    window.loginEmail = () => {
-      const email = document.getElementById('loginEmail').value.trim();
-      const senha = document.getElementById('loginSenha').value;
-      if (!email || !senha) return alert("Preencha email e senha.");
-      signInWithEmailAndPassword(auth, email, senha)
-        .then(() => window.location.href = "app.html")
-        .catch(err => alert("Erro ao logar: " + err.message));
-    };
-
-    window.criarConta = () => {
-      const nome = document.getElementById('cadastroNome').value.trim();
-      const email = document.getElementById('cadastroEmail').value.trim();
-      const senha = document.getElementById('cadastroSenha').value;
-      const confirmarSenha = document.getElementById('confirmarSenha').value;
-      if (!nome || !email || !senha) return alert("Preencha todos os campos.");
-      if (senha !== confirmarSenha) return alert("As senhas não conferem.");
-      createUserWithEmailAndPassword(auth, email, senha)
-        .then(userCredential => {
-          updateProfile(userCredential.user, { displayName: nome })
-            .then(() => window.location.href = "app.html");
-        })
-        .catch(err => alert("Erro ao criar conta: " + err.message));
-    };
-
-    onAuthStateChanged(auth, (user) => {
-      if (user) {
-        window.location.href = "app.html";
-      }
-    });
-  </script>
-</body>
->>>>>>> e7a27b57d139155a6376e31227a4b769fc33f31d
 </html>
