--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       background-color: #d40000;
       font-family: Arial, sans-serif;
       display: flex;
+      flex-direction: column; /* Alinha itens verticalmente */
       align-items: center;
       justify-content: center;
       min-height: 100vh;
@@ -16,21 +17,22 @@
       padding: 20px;
       box-sizing: border-box;
     }
+    .logo {
+      width: 100px;
+      margin-bottom: 20px;
+    }
     .login-card {
       background-color: #ffffff;
-      padding: 40px 30px;
+      padding: 30px;
       border-radius: 8px;
       box-shadow: 0 4px 15px rgba(0,0,0,0.2);
       width: 100%;
       max-width: 400px;
       text-align: center;
     }
-    .logo {
-      width: 100px;
-      margin-bottom: 20px;
-    }
     h1 {
       color: #333;
+      margin-top: 0;
       margin-bottom: 30px;
       font-size: 24px;
     }
@@ -86,8 +88,10 @@
   </style>
 </head>
 <body>
+  
+  <img src="https://i.imgur.com/dHOSups.png" alt="Scanlist Market Logo" class="logo">
+
   <div class="login-card">
-    <img src="https://i.imgur.com/dHOSups.png" alt="Scanlist Market Logo" class="logo">
     <h1 id="form-title">Login</h1>
 
     <div id="form-container">
